# [package]
# name = "GetSecretApp"
# path = "ruby/get-secret.rs"

[package]
name = "GetSecretApp" # the name of the package
version = "1.0.0"    # the current version, obeying semver
# authors = ["Alice <a@example.com>", "Bob <b@example.com>"]
build = "ruby/get-secret.rs"

[lib]
name = "foo"           # The name of the target.
path = "ruby/get-secret.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
# proc-macro = false     # Set to `true` for a proc-macro library.
# harness = true         # Use libtest harness.
# edition = "2015"       # The edition of the target.
# crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).
